# space-data-project

./: .gitignore  CLEANUP_LOG.md  Dockerfile  MIGRATION_COMPLETE.md  MISSION_COMPLETE.md  PROJECT_COMPLETION.md  PYTHON_REMOVAL_IN_PROGRESS  PYTHON_REMOVED.md  README.md  RUST_ONLY_README.md  cleanup_python.sh  docker-compose.yml  fix_simulation.sh  requirements-dev.txt
.copilot/: README.md  project_context.md  prompts.md
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  ci.yml.disabled
config/: requirements.txt
docs/: NASA_DoD_Standards_Compliance.md  NASA_DoD_Standards_Compliance_Fixed.md  PRIORITY_SYSTEM_TESTING_GUIDE.md  REQUIREMENTS_TRACEABILITY_MATRIX.md  RUST_MIGRATION.md  RUST_ONLY_README.md  SOFTWARE_ARCHITECTURE_DOCUMENT.md  SOFTWARE_DESIGN_DOCUMENT.md  SOFTWARE_REQUIREMENTS_SPECIFICATION.md  TEST_PLAN_DOCUMENT.md  project_plan.md
rust-workspace/: Cargo.toml  build_and_test.sh
rust-workspace/examples/: priority_demo.rs
rust-workspace/ground/: Cargo.toml
rust-workspace/ground/src/: main.rs
rust-workspace/satellite/: Cargo.toml
rust-workspace/satellite/src/: communication.rs  error_handling.rs  hardware.rs  main.rs
rust-workspace/shared/: Cargo.toml
rust-workspace/shared/src/: ccsds.rs  commands.rs  error.rs  lib.rs  messaging.rs  security.rs  telemetry.rs  time.rs  types.rs
rust-workspace/shared/tests/: full_suite.rs  integration_tests.rs
rust-workspace/simulation/: Cargo.toml
rust-workspace/simulation/src/: advanced_rf.rs  atmospheric.rs  bands.rs  interactive.rs  interference.rs  lib.rs  main.rs  main_clean.rs  main_old.rs
rust-workspace/simulation/tests/: simulation_tests.rs
rust-workspace/tests/: integration_tests.rs  priority_stress_tests.rs
scripts/deprecated/: fix_repeat.sh
src/: __init__.py  main.py
src/bands/: __init__.py
src/fault_tolerance/: __init__.py  error_handler.py  ldpc_error_correction.py
src/messaging/: __init__.py  priority_scheduler.py
src/monitoring/: __init__.py
src/security/: __init__.py
src/utils/: __init__.py  boundary_validator.py  health_check.py  memory_manager.py  time_measurement.py
src/visualization/: __init__.py
