[package]
name = "space-comms-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and protocols for space communication systems"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
heapless = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }

[features]
default = ["std"]
std = []
no-std = ["heapless/ufmt-impl"]

[lib]
name = "space_comms_shared"
crate-type = ["lib"]
